AA-2002-03-19-4  Bugfix:   - scripts for I18N, gettext-1.11

AA-2002-03-19-3  Bugfix:   - qmon cluster_token_extend_time was lost

AA-2002-03-19-2  Feature:  - install doc for CSP

AA-2002-03-19-1  Bugfix:   - STN_type sharetree read from disk
                           - qmon Sharetree Find fix scrollbars

CR-2002-03-19-1  Testsuite: - stop install_core_system check if qmaster 
                              is not reachable after installing last execd
                            - shutdown_core_system(): only try to use root
                              access if password is available

CR-2002-03-19-0  Bugfix:    Fixed broken build on IRIX6 arch

CR-2002-03-18-1  Bugfix:    Mail on suspend wasn't working
                 Issue:     #86
 
                 Bugfix:    Wrong error message when service sge_commd 
                            is not available    
                 Issue:     #158


AA-2002-03-18-3  Legal:     Xmt copyrights

AA-2002-03-18-2  Bugfix.:   cluster config sensitivity grey labels

EB-2002-03-18-0  Enhancem.: Modifications for redhat 7.2 (gcc 2.96) 

CR-2002-03-18-0  Testsuite: - qdel check:
                              1) clear all error states on test cleanup
                              2) leave test loop on job submission error
                            - new version numbers: SGEEE_5.3beta2_2 and
                                                   SGE_5.3beta2_2
 

AA-2002-03-18-1  Bugfix:    - STN_type field is set to display sharetree nodes
                            correctly
                            - Clear Usage
                            - shellstart mode fix in qmon
                            - logo update /off_home/codine/sun-copyright
                            - why crash fix
                            - interactive mode fix
                            - global host first
                            - project itemlist sorting


AA-2002-03-18-0  Bugfix:    sge_ca script, check /dev/random 1st
